--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# This is an example.
+# Update if you pull 
+# this repo.
+
 # --- App ---
 APP_HOST=0.0.0.0
 APP_PORT=8000
@@ -6,7 +10,7 @@ APP_NAME=NorenQR
 ASSET_ORIGIN=http://localhost:8000
 
 # --- Database ---
-DATABASE_URL=postgresql+asyncpg://norenqr:norenqr@postgres:5432/norenqr
+DATABASE_URL=postgresql+asyncpg://akamisync:acamisync@postgres:5432/acamisync
 
 # --- Redis ---
 REDIS_URL=redis://redis:6379/0
